# smack

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac  libsmack-1.0.pc.in  libsmack.pc.in  libsmack.spec.in
debian/: changelog  control  copyright  libsmack-dev.install  libsmack-dev.manpages  libsmack.install  libsmack1.install  libsmack1.postinst  libsmack1.postrm  libsmack1.symbols  rules  smack-utils.dirs  smack-utils.init  smack-utils.install  smack-utils.manpages
doc/: .gitignore  Doxyfile  Doxyfile.in  Makefile.am  chsmack.8  smack_access_add.3  smack_accesses_add.3  smack_accesses_add_from_file.3  smack_fsetlabel.3  smack_getlabel.3  smack_have_access.3  smack_label_length.3  smack_revoke_subject.3  smackaccess.1  smackcipso.8  smackctl.8  smackd.8  smackload.8
init/: Makefile.am  smack.mount  smack.rc  smack.service
libsmack/: .gitignore  Makefile.am  common.c  common.h  dso.h  init.c  libsmack.c  libsmack.h  libsmack.sym
libsmack/sys/: smack.h
pam/: Makefile.am  pam_smack.8  pam_smack.8.xml  pam_smack.c
src/: Makefile.am  libsmack.c  libsmack.h  libsmack.sym  smack.c  smack.h  smack_internal.c  smack_internal.h  smack_labels.c  smack_misc.c  smack_rules.c  smack_users.c  smack_xattr.c
tests/: .gitignore  Makefile  Makefile.am  access.c  check_labels.c  check_rules.c  check_smack.c  check_users.c  check_xattr.c  gen.c  generate-rules.sh  generator.c  make_policies.bash  makefile  printload.c  smackaccess.c  smackctl.c  smackself.c  smackselflabel.c
tests/data/: add_label-excepted.txt  add_new_rule-excepted.txt  add_new_rule-in.txt  add_user-excepted.txt  modify_existing_rule-excepted.txt  remove_object_rules-excepted.txt  remove_rule-excepted.txt  remove_subject_rules-excepted.txt  remove_user-excepted.txt  rule_set_add_and_save_to_config-excepted.txt  rule_set_attach_label_set_save_rules-excepted.txt  rule_set_read_from_file_and_save_to_kernel-excepted.txt  rule_set_remove_and_save_to_kernel-excepted.txt  rule_set_remove_by_object_and_save_to_kernel-excepted.txt  rule_set_remove_by_subject_and_save_to_kernel-excepted.txt  rule_set_remove_by_subject_and_save_to_kernel-in.txt  rw_users-in.txt  test_save_to_file-excepted.txt  test_save_to_kernel-excepted.txt  write_rules_config-excepted.txt  write_rules_kernel-excepted.txt
utils/: .gitignore  Makefile.am  chsmack.c  common.c  common.h  smackaccess.c  smackcipso.c  smackctl.c  smackd.c  smackload.c  smackself.c
